[gd_scene load_steps=2 format=3 uid="uid://cl8i0l6tnssey"]

[ext_resource type="Script" path="res://Objects/Scenes/pause_menu.gd" id="1_rkn2y"]

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("ButtonContainer", "resume_button", "quit_to_menu_button", "quit_to_desktop_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rkn2y")
ButtonContainer = NodePath("AspectRatioContainer/CenterContainer/VBoxContainer")
resume_button = NodePath("AspectRatioContainer/CenterContainer/VBoxContainer/ResumeButton")
quit_to_menu_button = NodePath("AspectRatioContainer/CenterContainer/VBoxContainer/QuitMenuButton")
quit_to_desktop_button = NodePath("AspectRatioContainer/CenterContainer/VBoxContainer/QuitDesktopButton")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Panel" type="Panel" parent="AspectRatioContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="AspectRatioContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/CenterContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="AspectRatioContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Button5" type="Button" parent="AspectRatioContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Button4" type="Button" parent="AspectRatioContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="QuitMenuButton" type="Button" parent="AspectRatioContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit To Menu"

[node name="QuitDesktopButton" type="Button" parent="AspectRatioContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit To Desktop"

[connection signal="pressed" from="AspectRatioContainer/CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="AspectRatioContainer/CenterContainer/VBoxContainer/QuitMenuButton" to="." method="_on_quit_menu_button_pressed"]
[connection signal="pressed" from="AspectRatioContainer/CenterContainer/VBoxContainer/QuitDesktopButton" to="." method="_on_quit_desktop_button_pressed"]
